--- a/studentDetails.html
+++ b/studentDetails.html
@@ -12,6 +12,7 @@
             <img src="./images/logo.png" alt="Logo">
             <h1>NowKnow <span>. Connect to learn</span></h1>
         </div>
+        <a href="login.html">Login</a>
     </header>
     <nav class="nav">
         <ul>
